--- a/docs/content/cfginitstart_pxf.html.md.erb
+++ b/docs/content/cfginitstart_pxf.html.md.erb
@@ -24,19 +24,15 @@ under the License.
 
 PXF provides two management commands:
 
-- `pxf cluster` - manage all PXF Service instances in the Greenplum Database cluster
-- `pxf` - manage the PXF Service instance on a specific Greenplum Database host
-
-The [`pxf cluster`](ref/pxf-cluster.html) command supports `init` (deprecated), `reset` (deprecated), `register`, `prepare`, `start`, `restart`, `status`, `stop`, and `sync` subcommands. When you run a `pxf cluster` subcommand on the Greenplum Database master host, you perform the operation on all segment hosts in the Greenplum Database cluster. PXF also runs the `prepare`, `register`, and `sync` commands on the standby master host.
-
-The [`pxf`](ref/pxf.html) command supports `init` (deprecated), `reset` (deprecated), `prepare`, `start`, `stop`, `restart`, `status`, and `register`  operations. These operations run locally. That is, if you want to start or stop the PXF Service on a specific Greenplum Database segment host, you log in to the host and run the command.
+- [`pxf cluster`](ref/pxf-cluster.html) - manage all PXF Service instances in the Greenplum Database cluster
+- [`pxf`](ref/pxf.html) - manage the PXF Service instance on a specific Greenplum Database host
 
 <div class="note">The procedures in this topic assume that you have added the <code>$PXF_HOME/bin</code> directory to your <code>$PATH</code>.</div>
 
 
 ## <a id="start_pxf"></a>Starting PXF
 
-After configuring PXF, you must start PXF on each segment host in your Greenplum Database cluster. The PXF Service, once started, runs as the `gpadmin` user on default port 5888. Only the `gpadmin` user can start and stop the PXF Service.
+After configuring PXF, you must start PXF on each host in your Greenplum Database cluster. The PXF Service, once started, runs as the `gpadmin` user on default port 5888. Only the `gpadmin` user can start and stop the PXF Service.
 
 If you want to change the default PXF configuration, you must update the configuration before you start PXF, or restart PXF if it is already running. See [About the PXF Configuration Files](config_files.html) for information about the user-customizable PXF configuration properties and the configuration update procedure.
 
@@ -50,7 +46,7 @@ Before you start PXF in your Greenplum Database cluster, ensure that:
  
 ### <a id="start_pxf_proc" class="no-quick-link"></a>Procedure
 
-Perform the following procedure to start PXF on each segment host in your Greenplum Database cluster.
+Perform the following procedure to start PXF on each host in your Greenplum Database cluster.
 
 1. Log in to the Greenplum Database master node:
 
@@ -58,7 +54,7 @@ Perform the following procedure to start PXF on each segment host in your Greenp
     $ ssh gpadmin@<gpmaster>
     ```
 
-3. Run the `pxf cluster start` command to start PXF on each segment host:
+3. Run the `pxf cluster start` command to start PXF on each host:
 
     ```shell
     gpadmin@gpmaster$ pxf cluster start
@@ -66,7 +62,7 @@ Perform the following procedure to start PXF on each segment host in your Greenp
 
 ## <a id="stop_pxf"></a>Stopping PXF
 
-If you must stop PXF, for example if you are upgrading PXF, you must stop PXF on each segment host in your Greenplum Database cluster. Only the `gpadmin` user can stop the PXF Service.
+If you must stop PXF, for example if you are upgrading PXF, you must stop PXF on each host in your Greenplum Database cluster. Only the `gpadmin` user can stop the PXF Service.
 
 ### <a id="stop_pxf_prereq" class="no-quick-link"></a>Prerequisites
 
@@ -74,7 +70,7 @@ Before you stop PXF in your Greenplum Database cluster, ensure that your Greenpl
  
 ### <a id="stop_pxf_proc" class="no-quick-link"></a>Procedure
 
-Perform the following procedure to stop PXF on each segment host in your Greenplum Database cluster.
+Perform the following procedure to stop PXF on each host in your Greenplum Database cluster.
 
 1. Log in to the Greenplum Database master node:
 
@@ -82,7 +78,7 @@ Perform the following procedure to stop PXF on each segment host in your Greenpl
     $ ssh gpadmin@<gpmaster>
     ```
 
-3. Run the `pxf cluster stop` command to stop PXF on each segment host:
+3. Run the `pxf cluster stop` command to stop PXF on each host:
 
     ```shell
     gpadmin@gpmaster$ pxf cluster stop
@@ -90,7 +86,7 @@ Perform the following procedure to stop PXF on each segment host in your Greenpl
 
 ## <a id="restart_pxf"></a>Restarting PXF
 
-If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_BASE/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all segment hosts in your Greenplum Database cluster.
+If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_BASE/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all hosts in your Greenplum Database cluster.
 
 Only the `gpadmin` user can restart the PXF Service.
 
