--- a/docs/content/config_files.html.md.erb
+++ b/docs/content/config_files.html.md.erb
@@ -68,7 +68,7 @@ Procedure:
     gpadmin@gpmaster$ pxf cluster sync
     ```
 
-1. (Re)start PXF on all segment hosts:
+1. (Re)start PXF on all Greenplum hosts:
 
     ``` shell
     gpadmin@gpmaster$ pxf cluster restart
