--- a/docs/content/upgrade_6.html.md.erb
+++ b/docs/content/upgrade_6.html.md.erb
@@ -29,7 +29,7 @@ Perform this procedure before you upgrade to a new version of PXF 6:
 
 1. next step
 
-1. Stop PXF on each segment host as described in [Stopping PXF](cfginitstart_pxf.html#stop_pxf).
+1. Stop PXF on each Greenplum host as described in [Stopping PXF](cfginitstart_pxf.html#stop_pxf).
 
 1. Install the new version of PXF, identify and note the new PXF version number, and then continue your PXF upgrade with [Step 2: Complete the Upgrade to a Newere PXF 6](#pxfup).
 
@@ -54,5 +54,5 @@ After you install the new version of PXF, perform the following procedure:
     gpadmin@gpmaster$ pxf cluster sync
     ```
  
-1. Start PXF on each segment host as described in [Starting PXF](cfginitstart_pxf.html#start_pxf).
+1. Start PXF on each Greenplum host as described in [Starting PXF](cfginitstart_pxf.html#start_pxf).
 
