--- a/docs/content/access_objstore.html.md.erb
+++ b/docs/content/access_objstore.html.md.erb
@@ -27,9 +27,9 @@ PXF is installed with connectors to Azure Blob Storage, Azure Data Lake, Google 
 
 Before working with object store data using PXF, ensure that:
 
-- You have configured PXF, and PXF is running on each Greenplum Database segment host. See [Configuring PXF](instcfg_pxf.html) for additional information.
+- You have configured PXF, and PXF is running on each Greenplum Database host. See [Configuring PXF](instcfg_pxf.html) for additional information.
 - You have configured the PXF Object Store Connectors that you plan to use. Refer to [Configuring Connectors to Azure and Google Cloud Storage Object Stores](objstore_cfg.html) and [Configuring Connectors to Minio and S3 Object Stores](s3_objstore_cfg.html) for instructions.
-- Time is synchronized between the Greenplum Database segment hosts and the external object store systems.
+- Time is synchronized between the Greenplum Database hosts and the external object store systems.
 
 
 ## <a id="objstore_connectors"></a>Connectors, Data Formats, and Profiles
