--- a/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -43,7 +43,7 @@
               </li>
             </ul>
           </li>
-          <li><a href="/pxf/WIP/upgrade_pxf_rpm.html" format="markdown">Upgrading PXF</a></li>
+          <li><a href="/pxf/WIP/upgrade_5_to_6.html" format="markdown">Upgrading from PXF 5</a></li>
           <li><a href="/pxf/WIP/cfginitstart_pxf.html" format="markdown">Starting, Stopping, and Restarting PXF</a></li>
           <li><a href="/pxf/WIP/using_pxf.html" format="markdown">Granting Users Access to PXF</a></li>
           <li><a href="/pxf/WIP/reg_jar_depend.html" format="markdown">Registering PXF Library Dependencies</a></li>
@@ -86,8 +86,8 @@
           <li><a href="/pxf/WIP/read_s3_s3select.html" format="markdown">Reading CSV and Parquet Data From S3 Using S3 Select</a></li>
         </ul>
       </li>
-      <li><a href="/pxf/WIP/nfs_pxf.html" format="markdown">Accessing Files on a Network File System with PXF</a></li>
       <li><a href="/pxf/WIP/jdbc_pxf.html" format="markdown">Accessing an SQL Database with PXF (JDBC)</a></li>
+      <li><a href="/pxf/WIP/nfs_pxf.html" format="markdown">Accessing Files on a Network File System with PXF</a></li>
       <li><a href="/pxf/WIP/troubleshooting_pxf.html" format="markdown">Troubleshooting PXF</a></li>
       <li class="has_submenu">
         <a href="/pxf/WIP/ref/pxf-ref.html" format="markdown">PXF Utility Reference</a>
